--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+:root {
+  --border-grey: hsl(0deg, 0%, 40%);
+}
+
 * {
   box-sizing: border-box;
   font-family: "Lato", sans-serif;
@@ -10,3 +14,35 @@ body {
 }
 
 /* Add styles here! */
+
+header {
+  margin : auto;
+}
+
+p, h2, h1 {
+  padding : 16px;
+}
+
+strong {
+  color : hsl(160deg, 100%, 30%);
+}
+
+main {
+  border-top : 8px solid var(--border-grey); 
+  background-color : hsl(0deg, 0%, 60%);
+}
+
+.card {
+   background-color: white;
+   max-width: 600px;
+   margin: auto;
+   border-bottom: 8px solid var(--border-grey);
+}
+
+.indented-heading {
+  background-color : hsl(45deg, 100%, 50%);
+  border-bottom: 8px solid hsl(45deg, 100%, 40%);
+  padding : 24px 32px;
+  margin-left : -16px;
+  width : fit-content;
+}
