--- a/style.css
+++ b/style.css
@@ -15,42 +15,44 @@ body {
 
 /* Add styles here! */
 
-.intro-chunk{
-    max-width: 360px;
-    padding-left: 64px; 
-    margin-bottom: 48px;
+.intro-chunk {
+  max-width: 360px;
+  margin-bottom: 48px;
 }
 
-p, h2, h1 {
-  margin : 16px;
+.max-width-wrapper {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 550px;
+  padding: 0 24px;
 }
 
 h1 {
-  margin-bottom : 32px;
+  margin-bottom: 32px;
 }
 
 strong {
-  color : hsl(160deg, 100%, 30%);
+  color: hsl(160deg, 100%, 30%);
 }
 
 main {
-  border-top : 8px solid var(--border-grey); 
-  background-color : hsl(0deg, 0%, 60%);
-  padding-left: 64px;
+  border-top: 8px solid var(--border-grey);
+  background-color: hsl(0deg, 0%, 60%);
   padding-top: 64px;
   padding-bottom: 36px;
 }
 
 .card {
-   background-color: white;
-   max-width: 600px;
-   border-bottom: 8px solid var(--border-grey);
+  background-color: white;
+  border-bottom: 8px solid var(--border-grey);
+  margin: -24px;
+  padding: 24px;
 }
 
 .indented-heading {
-  background-color : hsl(45deg, 100%, 50%);
+  background-color: hsl(45deg, 100%, 50%);
   border-bottom: 8px solid hsl(45deg, 100%, 40%);
-  padding : 24px 32px;
-  margin-left : -16px;
-  width : fit-content;
+  padding: 24px 32px;
+  margin-left: -32px;
+  width: fit-content;
 }
